syntax = "proto3";

package auth;

option go_package = "github.com/sigame/auth/proto";

// AuthService provides authentication and user information services
service AuthService {
  // ValidateToken validates a JWT access token and returns user information
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // GetUserInfo retrieves user information by user ID
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
}

// ValidateTokenRequest contains the token to validate
message ValidateTokenRequest {
  string token = 1;
}

// ValidateTokenResponse contains validation result and user information
message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string username = 3;
  string error = 4;
  string avatar_url = 5;
}

// GetUserInfoRequest contains the user ID to look up
message GetUserInfoRequest {
  string user_id = 1;
}

// GetUserInfoResponse contains user information
message GetUserInfoResponse {
  string user_id = 1;
  string username = 2;
  int64 created_at = 3; // Unix timestamp
  string error = 4;
  string avatar_url = 5;
}

